Adding holiday cheer

--- a/_posts/0000-01-02-jgodinez1114.md
+++ b/_posts/0000-01-02-jgodinez1114.md
@@ -2,6 +2,6 @@
 layout: slide
 title: "Welcome to our 2nd slide!"
 ----
-
+'Tis the season to be jolly!
 Make it a great day!
 Use the left arrow to go back.
